--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/crypto-js": "^4.1.1",
     "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^8.5.9",
+    "axios": "^1.1.2",
     "body-parser": "^1.20.0",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
