--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -6,6 +6,7 @@
 	},
 	"extends": [
 			"eslint:recommended",
+			"plugin:security/recommended",
 			"plugin:@typescript-eslint/eslint-recommended",
 			"plugin:@typescript-eslint/recommended",
 			"prettier"
