--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint": "^8.24.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-security": "^1.5.0",
     "prettier": "^2.7.1",
     "typescript": "^4.8.4"
   },
@@ -39,8 +40,10 @@
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
+    "inversify": "^6.0.1",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
+    "reflect-metadata": "^0.1.13",
     "tslog": "^3.3.4"
   }
 }
