--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "axios": "^1.1.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
