--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.14",
-    "@types/node": "^18.7.23",
+    "@types/node": "^18.11.4",
     "@types/pg": "^8.6.5",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "^5.38.1",
@@ -46,6 +46,7 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.8.0",
     "reflect-metadata": "^0.1.13",
-    "tslog": "^3.3.4"
+    "tslog": "^3.3.4",
+    "typeorm": "^0.3.10"
   }
 }
