--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "simpleorganization",
+  "name": "tinyorganization",
   "version": "1.0.0",
   "description": "small organization",
-  "main": "main.js",
+  "main": "main.ts",
   "scripts": {
     "start": "tsc && node  ./dist/main.js",
+    "dev": "tsc && nodemon",
     "lint": "eslint . --ext .ts",
     "prettier-format": "prettier --config .prettierrc './**/*.ts' --write",
     "build": "tsc",
@@ -26,21 +27,29 @@
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.2.1",
     "prettier": "^2.7.1",
-    "typescript": "^4.8.4"
+    "typescript": "^4.9.3"
   },
   "dependencies": {
     "@types/body-parser": "^1.19.2",
     "@types/crypto-js": "^4.1.1",
     "@types/dotenv": "^8.2.0",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/mongoose": "^5.11.97",
+    "@types/nodemon": "^1.19.2",
     "axios": "^1.1.2",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.0",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.7.5",
+    "nodemon": "^2.0.20",
     "pg": "^8.8.0",
-    "tslog": "^3.3.4"
+    "ts-node": "^10.9.1",
+    "tslog": "^3.3.4",
+    "typeorm": "^0.3.10"
   }
 }
